# homelab

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .sops.yaml  CLAUDE.md  README.md  mise.toml  pyproject.toml
.github/workflows/: ci.yaml
ansible/: README.md  ansible.cfg  mise.toml  pyproject.toml  requirements.yml
ansible/inventory/: hosts.example.ini  hosts.example.yml  hosts.ini
ansible/inventory/group_vars/: all.yml  k3s_cluster.yml
ansible/inventory/ips-ger-vps/: hosts.ini
ansible/inventory/ips-ger-vps-2/: hosts.ini
ansible/inventory/ips-ger-vps-2/group_vars/: k3s_cluster.yml
ansible/inventory/ips-ger-vps/group_vars/: k3s_cluster.yml
ansible/inventory/ips-usa-vps-2/group_vars/: all.yml  k3s_cluster.yml
ansible/inventory/sweb-infra/: hosts.ini
ansible/inventory/sweb-infra/group_vars/: k3s_cluster.yml
ansible/inventory/sweb-ru-vps/: hosts.ini
ansible/inventory/sweb-ru-vps/group_vars/: k3s_cluster.yml
ansible/playbooks/: bootstrap.yml  site.yml
ansible/roles/bootstrap/defaults/: main.yml
ansible/roles/bootstrap/tasks/: main.yml
ansible/roles/common/defaults/: main.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/hardening/tasks/: main.yml
ansible/roles/k3s/defaults/: main.yml
ansible/roles/k3s/handlers/: main.yml
ansible/roles/k3s/tasks/: main.yml
ansible/vars/: fleet.yml
docs/: 1_init_repo.md  2_yandex_cloud_bootstrap.md  3_vps_bootstrap.md  4_kubernetes_bootstrap.md  5_apps.md  6_sweb-ru-monitoring.md  README.md
kubernetes/: README.md
scripts/: yc-token.sh
terraform/: CLAUDE.md  README.md  mise.toml
(+222 files in other folders)
