[project]
name = "homelab"
version = "0"
description = "Personal infrastructure: Ansible + Flux GitOps + Terraform"
requires-python = ">=3.11"
dependencies = []

# Ops tooling — installed by `uv sync`, pinned by uv.lock for reproducibility.
[dependency-groups]
dev = [
  "ansible-core>=2.17",
  "ansible-lint>=24.0",
]
