[project]
name = "homelab-ansible"
version = "0"
description = "Ansible toolchain (Layer 1) for the homelab repo"
requires-python = ">=3.14"
dependencies = []

# Ops tooling — installed by `uv sync`, pinned by uv.lock for reproducibility.
[dependency-groups]
dev = [
  "ansible-core>=2.17",
  "ansible-lint>=24.0",
]
